cloudformation/nginx-tcell-proxy-only.yaml
AWSTemplateFormatVersion: '2010-09-09'
Metadata:
  License: Apache-2.0
Description: 'Launches the tCell agent in an NGINX proxy server.'
Parameters:
  KeyName:
    Description:  keypair for all instance access
    Type: AWS::EC2::KeyPair::KeyName
  SSHLocation:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: 9
    MaxLength: 18
    Default: 0.0.0.0/0
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
  WebAppDomain:
    Description: This is the address of the web app you want to protect with tCell.
    Type: String
    MinLength: 1
    MaxLength: 253
    AllowedPattern: ^(http)(s?):\/\/[a-z0-9\.\-\:]*
    ConstraintDescription: Must be a valid URL, beginning with http:// or https://
  ApiKey:
    Type: String
  AppId:
    Type: String
  InstanceTypeParameter:
    Description: WebServer EC2 instance type
    Type: String
    Default: t3.small
    AllowedValues: [t2.nano, t2.micro, t2.small, t2.medium, t2.large, t2.xlarge, t2.2xlarge,
      t3.nano, t3.micro, t3.small, t3.medium, t3.large, t3.xlarge, t3.2xlarge,
      m4.large, m4.xlarge, m4.2xlarge, m4.4xlarge, m4.10xlarge,
      m5.large, m5.xlarge, m5.2xlarge, m5.4xlarge,
      c5.large, c5.xlarge, c5.2xlarge, c5.4xlarge, c5.9xlarge,
      g3.8xlarge,
      r5.large, r5.xlarge, r5.2xlarge, r5.4xlarge, r3.12xlarge,
      i3.xlarge, i3.2xlarge, i3.4xlarge, i3.8xlarge,
      d2.xlarge, d2.2xlarge, d2.4xlarge, d2.8xlarge]
    ConstraintDescription: must be a valid EC2 instance type.
Resources:
  NginxTcell:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceTypeParameter
      SecurityGroups: [!Ref 'SshSecGroup', !Ref 'ExternalHttpSecGroup' ]
      KeyName: !Ref 'KeyName'
      ImageId: ami-030266009481b952c
      UserData:
              Fn::Base64:
                !Sub |
                #!/bin/bash -xe
                exec > >(tee /var/log/user-data.log|logger -t user-data -s 2>/dev/console) 2>&1
                  sudo tcell-cfg nginx --api-key ${ApiKey} --app-id ${AppId} --forward-address ${WebAppDomain}
                  sudo service nginx restart
  SshSecGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access via port 22
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: !Ref 'SSHLocation'
  ExternalHttpSecGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: enable http
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: !Ref 'SSHLocation'
  ProxySecGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable http 
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
Outputs:
  InstanceId:
    Description: InstanceId of the newly created EC2 instance
    Value: !Ref 'NginxTcell'
  AZ:
    Description: Availability Zone of the newly created EC2 instance
    Value: !GetAtt [NginxTcell, AvailabilityZone]
  PublicDNS:
    Description: Public DNSName of the newly created EC2 instance
    Value: !GetAtt [NginxTcell, PublicDnsName]
  PublicIP:
    Description: Public IP address of the newly created EC2 instance
    Value: !GetAtt [NginxTcell, PublicIp]
